# KK

./: .gitignore  LICENSE  MANIFEST.in  README.md  analyzer.py  binance_api.py  config.py  indicators.py  main.py  patterns.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  quality.yml  release.yml
